Dodane SM, Poprawione Controller (security i service - ale nie do końca)[lepsze rozróżnienie]

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=GPECapp
 spring.datasource.generate-unique-name=false
 spring.datasource.name=dbGPEC
+spring.datasource.password=123
+spring.datasource.username=GPEC
