--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.application.name=GPECapp
-spring.datasource.generate-unique-name=false
-spring.datasource.name=dbGPEC
-spring.datasource.password=123
-spring.datasource.username=GPEC
+
+
+
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db-gpec
+spring.datasource.username=root
+spring.datasource.password=Ekl1erek!
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
