Od nowa - Tylko modele i repo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,19 @@
 spring.application.name=GPECapp
 
-
-
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db-gpec
+# konf baza danych MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/db-gpec?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Ekl1erek!
-spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Konf JPA
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Konf Flyway
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
+
+# Konf Thymeleaf
+spring.thymeleaf.cache=false
